@@ -1,9 +1,8 @@
 #!/bin/sh
 
-# Slackware build script for wxGTK
+# Slackware build script for PyXDG
 
-# Copyright 2006-2009 Chess Griffin <chess@chessgriffin.com>
-# Copyright 2010-2011 Niels Horn, Rio de Janeiro, RJ, Brazil
+# Copyright 2008-2009  Frank Caraballo <fecaraballo{at}gmail{dot}com>
 # All rights reserved.
 #
 # Redistribution and use of this script, with or without modification, is
@@ -22,24 +21,20 @@
 # WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 # OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-# Lots of key help from Eric Hameleers and the SBo admins.
-
-# revision date: 2011/12/23
 #
 # Modified by Niki Kovacs <info@microlinux.fr>
 
-PRGNAM=wxGTK
-VERSION=${VERSION:-2.8.12}
+PRGNAM=pyxdg
+VERSION=${VERSION:-0.25}
 BUILD=${BUILD:-1}
 TAG=${TAG:-_microlinux}
 
-NUMJOBS=${NUMJOBS:--j5}
-
+# Automatically determine the architecture we're building on:
 if [ -z "$ARCH" ]; then
   case "$( uname -m )" in
     i?86) ARCH=i486 ;;
     arm*) ARCH=arm ;;
+    # Unless $ARCH is already set, use uname -m for all other archs:
        *) ARCH=$( uname -m ) ;;
   esac
 fi
@@ -48,10 +43,6 @@ CWD=$(pwd)
 TMP=${TMP:-/tmp/microlinux}
 PKG=$TMP/package-$PRGNAM
 OUTPUT=${OUTPUT:-/tmp}
-
-# If you don't want a unicode-enabled build, change to NO or
-# pass UNICODE=NO ./wxGTK.SlackBuild when building
-UNICODE=${UNICODE:-YES}
 
 if [ "$ARCH" = "i486" ]; then
   SLKCFLAGS="-O2 -march=i486 -mtune=i686"
@@ -62,9 +53,6 @@ elif [ "$ARCH" = "i686" ]; then
 elif [ "$ARCH" = "x86_64" ]; then
   SLKCFLAGS="-O2 -fPIC"
   LIBDIRSUFFIX="64"
-elif [ "$ARCH" = "arm" ]; then
-  SLKCFLAGS="-O2 -march=armv4t"
-  LIBDIRSUFFIX=""
 else
   SLKCFLAGS="-O2"
   LIBDIRSUFFIX=""
@@ -72,7 +60,7 @@ fi
 
 set -e
 
-DOWNLOAD="http://downloads.sourceforge.net/wxwindows/$PRGNAM-$VERSION.tar.gz"
+DOWNLOAD="http://pypi.python.org/packages/source/p/$PRGNAM/$PRGNAM-$VERSION.tar.gz"
 
 wget -c $DOWNLOAD
 
@@ -89,43 +77,14 @@ find . \
  \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
  -exec chmod 644 {} \;
 
-# Set unicode flag as desired by UNICODE variable
-if [ "$UNICODE" = "YES" ]; then
-  _do_unicode="en"
-elif [ "$UNICODE" = "NO" ]; then
-  _do_unicode="dis"
-fi
-
-CFLAGS="$SLKCFLAGS" \
-CXXFLAGS="$SLKCFLAGS" \
-./configure \
-  --prefix=/usr \
-  --libdir=/usr/lib${LIBDIRSUFFIX} \
-  --sysconfdir=/etc \
-  --enable-shared \
-  --enable-mediactrl \
-  --with-opengl \
-  --${_do_unicode}able-unicode \
-  --build=$ARCH-slackware-linux
-
-make $NUMJOBS 
-make install DESTDIR=$PKG || exit 1
+python setup.py install --root $PKG
 
 find $PKG | xargs file | grep -e "executable" -e "shared object" | grep ELF \
   | cut -f 1 -d : | xargs strip --strip-unneeded 2> /dev/null || true
 
-# Now let's fix the broken symlink created by the package
-( cd $PKG/usr/bin
-  rm wx-config
-  if [ "$UNICODE" = "YES" ]; then
-    ln -s /usr/lib${LIBDIRSUFFIX}/wx/config/gtk2-unicode-release-2.8 wx-config
-  elif [ "$UNICODE" = "NO" ]; then
-    ln -s /usr/lib${LIBDIRSUFFIX}/wx/config/gtk2-ansi-release-2.8 wx-config
-  fi
-)
-
 mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
-cp -a docs/* $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a AUTHORS ChangeLog COPYING INSTALL PKG-INFO README TODO \
+  $PKG/usr/doc/$PRGNAM-$VERSION
 cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
 
 mkdir -p $PKG/install
