@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+pyxdg: PyXDG (Python Library)
+pyxdg:
+pyxdg: PyXDG contains implementations of freedesktop.org standards in Python.
+pyxdg:
+pyxdg: 
+pyxdg:
+pyxdg:
+pyxdg:
+pyxdg:
+pyxdg:
+pyxdg: Package created by Niki Kovacs <info@microlinux.fr>
