@@ -1,1 +1,0 @@
-wxGTK-*.tar.gz
