@@ -1,12 +1,0 @@
-     |-----handy-ruler------------------------------------------------------|
-wxGTK: wxGTK (cross-platform GUI toolkit)
-wxGTK:
-wxGTK: wxGTK is part of wxWidgets, a cross-platform API for writing GUI
-wxGTK: applications on multiple platforms that still utilize the native
-wxGTK: platform's controls and utilities.
-wxGTK:
-wxGTK:
-wxGTK:
-wxGTK:
-wxGTK:
-wxGTK: Package created by Niki Kovacs <info@microlinux.fr>
