@@ -33,7 +33,7 @@
 
 PRGNAM=audacity
 VERSION=${VERSION:-2.0.6}
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}
 
 NUMJOBS=${NUMJOBS:--j5}
