@@ -6,7 +6,7 @@
 
 PRGNAM=openshot
 VERSION=${VERSION:-1.4.3}	 
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}		
 
 # Automatically determine the architecture we're building on:
