@@ -24,7 +24,7 @@
 
 PRGNAM=filezilla
 VERSION=${VERSION:-3.8.1}
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}
 
 NUMJOBS=${NUMJOBS:--j5}
