@@ -1,3 +1,10 @@
+
+l/wxGTK-2.8.12-i486-1_microlinux.txz: Removed.
+l/wxPython-2.8.12.1-i486-1_microlinux.txz: Added.
+xap/audacity-2.0.6-i486-2_microlinux.txz: Rebuilt.
+l/pyxdg-0.25-i486-1_microlinux.txz: Added.
+xap/openshot-1.4.3-i486-2_microlinux.txz: Rebuilt.
++--------------------------+
 Sun Jan  4 11:29:37 CET 2015
 xap/leafpad-0.8.18.1-i486-1_microlinux.txz: Added.
 xap/galculator-2.1.3-i486-1_microlinux.txz: Added.
